--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <a href="#top"><img src="img/logo.png" class="logo" alt="Logo Greta Carrozza"></a>
                 </div>
                 <div class="col-6 text-end">
-                    <svg class="hamburger" id="menuButton" xmlns="http://www.w3.org/2000/svg" width="32" height="20">
-                        <path d="M0 1H32" stroke="black" stroke-width="2"/>
-                        <path d="M0 7H32" stroke="black" stroke-width="2"/>
-                        <path d="M0 13H32" stroke="black" stroke-width="2"/>
+                    <svg class="hamburger" id="menuButton" xmlns="http://www.w3.org/2000/svg" width="32" height="20" viewBox="0 0 32 20">
+                        <path d="M0 2H32" stroke="black" stroke-width="2"/>
+                        <path d="M0 10H32" stroke="black" stroke-width="2"/>
+                        <path d="M0 18H32" stroke="black" stroke-width="2"/>
                     </svg>
                 </div>
             </div>
@@ -47,8 +47,8 @@
                     <h1>Greta<br>Carrozza</h1>
                     <h3>Portfolio digitale</h3>
                 </div>
-                <div class="col-12 col-md-6">
-                    <img src="img/foto_designer.JPG" alt="Greta Carrozza" class="img-fluid">
+                <div class="col-12 col-md-6 text-end">
+                    <img src="img/foto_designer.JPG" alt="Greta Carrozza" class="img-fluid img-hero">
                 </div>
             </div>
         </div>
@@ -56,18 +56,20 @@
 
     <!-- ABOUT -->
     <section id="about" class="section-gray">
-        <div class="container">
-            <div class="row g-4 align-items-center">
-                <div class="col-12 col-md-6">
-                    <h2>ABOUT<span class="numero">01</span></h2>
-                    <p>
-                        Le mie origini culturali influenzano il mio approccio al design, stimolando creatività e originalità.
-                        Sono una persona attenta ai dettagli e appassionata di estetica visiva, capace di trasformare idee in progetti concreti.
-                        Lavoro con impegno per creare soluzioni chiare, coerenti e di impatto.
-                    </p>
+        <div class="container-fluid">
+            <div class="row g-0 align-items-center">
+                <div class="col-12 col-md-6 order-md-0">
+                    <div class="content-box">
+                        <h2>ABOUT<span class="numero">01</span></h2>
+                        <p>
+                            Le mie origini culturali influenzano il mio approccio al design, stimolando creatività e originalità.
+                            Sono una persona attenta ai dettagli e appassionata di estetica visiva, capace di trasformare idee in progetti concreti.
+                            Lavoro con impegno per creare soluzioni chiare, coerenti e di impatto.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <img src="img/arco.png" class="img-fluid" alt="Arco d'Augusto, Rimini">
+                <div class="col-12 col-md-6 order-md-1">
+                    <img src="img/arco.png" class="img-fluid w-100" alt="Arco d'Augusto, Rimini">
                 </div>
             </div>
         </div>
@@ -75,17 +77,19 @@
 
     <!-- STUDY -->
     <section id="study" class="section-white">
-        <div class="container">
-            <div class="row g-4 align-items-center">
-                <div class="col-12 col-md-6 order-md-1">
-                    <img src="img/FOTO (2).png" class="img-fluid" alt="Maturità">
-                </div>
+        <div class="container-fluid">
+            <div class="row g-0 align-items-center">
                 <div class="col-12 col-md-6 order-md-0">
-                    <h2>STUDY<span class="numero">02</span></h2>
-                    <p>
-                        Ho frequentato il Liceo Economico Sociale, dove ho sviluppato un forte interesse per le dinamiche sociali.
-                        Successivamente, ho proseguito i miei studi all'università di Design a San Marino, approfondendo la mia creatività e la capacità di progettare soluzioni innovative.
-                    </p>
+                    <img src="img/FOTO (2).png" class="img-fluid w-100" alt="Maturità">
+                </div>
+                <div class="col-12 col-md-6 order-md-1">
+                    <div class="content-box">
+                        <h2>STUDY<span class="numero">02</span></h2>
+                        <p>
+                            Ho frequentato il Liceo Economico Sociale, dove ho sviluppato un forte interesse per le dinamiche sociali.
+                            Successivamente, ho proseguito i miei studi all'università di Design a San Marino, approfondendo la mia creatività e la capacità di progettare soluzioni innovative.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -93,18 +97,20 @@
 
     <!-- POINT OF VIEW -->
     <section id="pointofview" class="section-gray">
-        <div class="container">
-            <div class="row g-4 align-items-center">
-                <div class="col-12 col-md-6">
-                    <h2>POINT OF VIEW<span class="numero">03</span></h2>
-                    <p>
-                        Per me, il design è un modo per esprimere chi sono e dare vita alle mie idee.
-                        Adoro creare oggetti che non solo siano belli, ma anche pratici.
-                        Considero il design come un viaggio di scoperta, dove ogni progetto rappresenta un'opportunità per crescere.
-                    </p>
+        <div class="container-fluid">
+            <div class="row g-0 align-items-center">
+                <div class="col-12 col-md-6 order-md-0">
+                    <div class="content-box">
+                        <h2>POINT OF VIEW<span class="numero">03</span></h2>
+                        <p>
+                            Per me, il design è un modo per esprimere chi sono e dare vita alle mie idee.
+                            Adoro creare oggetti che non solo siano belli, ma anche pratici. In grado di comunicare qualcosa a chi li osserva o li utilizza.
+                            Considero il design come un viaggio di scoperta, dove ogni progetto rappresenta un'opportunità per imparare e crescere.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <img src="img/FOTO (1).png" class="img-fluid" alt="Università di Design San Marino">
+                <div class="col-12 col-md-6 order-md-1">
+                    <img src="img/FOTO (1).png" class="img-fluid w-100" alt="Università di Design San Marino">
                 </div>
             </div>
         </div>
@@ -115,35 +121,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2>GALLERY<span class="numero">04</span></h2>
+                    <h2 class="gallery-title">GALLERY<span class="numero">04</span></h2>
                 </div>
             </div>
             <div class="row g-4">
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <div class="card-project">
                         <img src="img/IMMAGINE SACRO.png" alt="Progetto Sacro" class="img-fluid">
-                        <h3>Workshop di Prodotto - Sacro</h3>
+                        <h4>Workshop di Prodotto - Sacro</h4>
                         <p>Realizzazione di una alzatina in carta per tenere il pane in tavola, incentrato sul tema della pace.</p>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <div class="card-project">
                         <img src="img/IMMAGINE VORTIGA.png" alt="Progetto Vortiga" class="img-fluid">
-                        <h3>Vortiga</h3>
-                        <p>Progetto di Geometria per il Design, basato sulla trasformazione geometrica.</p>
+                        <h4>Vortiga</h4>
+                        <p>Progetto di Geometria per il Design, mostra una trasformazione geometrica.</p>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <div class="card-project">
                         <img src="img/IMMAGINE ASTORIA.png" alt="Progetto Astoria" class="img-fluid">
-                        <h3>Identità visiva</h3>
+                        <h4>Identità visiva</h4>
                         <p>Identità visiva per l'ex cinema Astoria di Rimini.</p>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <div class="card-project">
                         <img src="img/IMMAGINE BESTIARIO.png" alt="Progetto Bestiario" class="img-fluid">
-                        <h3>Workshop di Serigrafia - Bestiario</h3>
+                        <h4>Workshop di Serigrafia - Bestiario</h4>
                         <p>Realizzazione di un booklet interamente realizzato a mano in serigrafia.</p>
                     </div>
                 </div>
