--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 order-md-1">
-                    <img src="img/arco.png" class="img-fluid w-100" alt="Arco d'Augusto, Rimini">
+                    <img src="img/arco.png" class="img-fluid" alt="Arco d'Augusto, Rimini">
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="container-fluid">
             <div class="row g-0 align-items-center">
                 <div class="col-12 col-md-6 order-md-0">
-                    <img src="img/FOTO (2).png" class="img-fluid w-100" alt="Maturità">
+                    <img src="img/FOTO (2).png" class="img-fluid" alt="Maturità">
                 </div>
                 <div class="col-12 col-md-6 order-md-1">
                     <div class="content-box">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 order-md-1">
-                    <img src="img/FOTO (1).png" class="img-fluid w-100" alt="Università di Design San Marino">
+                    <img src="img/FOTO (1).png" class="img-fluid" alt="Università di Design San Marino">
                 </div>
             </div>
         </div>
