--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </nav>
 
     <!-- INIZIO -->
+ <section class="hero-section">
     <div class="container">
-        <section class="hero-section">
             <div class="row g-4 align-items-center">
                 <div class="col-12 col-md-6">
                     <h1>Greta<br>Carrozza</h1>
@@ -54,12 +54,12 @@
                     <img src="img/foto_designer.JPG" alt="Greta Carrozza" class="img-fluid img-hero">
                 </div>
             </div>
-        </section>
-    </div>
+         </div>
+  </section>
 
     <!-- ABOUT -->
-    <div class="container">
         <section id="about" class="section-gray">
+          <div class="container">
             <div class="row g-0 align-items-center">
                 <div class="col-12 col-md-6 order-md-0">
                     <div class="content-box">
@@ -75,12 +75,13 @@
                     <img src="img/arco.png" class="img-fluid" alt="Arco d'Augusto, Rimini">
                 </div>
             </div>
+         </div>
         </section>
-    </div>
+    
 
     <!-- STUDY -->
-    <div class="container">
-        <section id="study" class="section-white">
+      <section id="study" class="section-white">
+         <div class="container">
             <div class="row g-0 align-items-center">
                 <div class="col-12 col-md-6 order-md-0">
                     <img src="img/FOTO (2).png" class="img-fluid" alt="Maturità">
@@ -95,12 +96,14 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+         </div>
+      </section>
+     
+
 
     <!-- POINT OF VIEW -->
+<section id="pointofview" class="section-gray">
     <div class="container">
-        <section id="pointofview" class="section-gray">
             <div class="row g-0 align-items-center">
                 <div class="col-12 col-md-6 order-md-0">
                     <div class="content-box">
@@ -116,12 +119,12 @@
                     <img src="img/FOTO (1).png" class="img-fluid" alt="Università di Design San Marino">
                 </div>
             </div>
-        </section>
     </div>
+</section>
 
     <!-- GALLERY -->
-    <div class="container">
-        <section id="gallery" class="section-white">
+     <section id="gallery" class="section-white"></section>
+       <div class="container">
             <div class="row">
                 <div class="col-12">
                     <h2 class="gallery-title">GALLERY<span class="numero">04</span>  
@@ -167,12 +170,13 @@
                     </div>
                 </div>
             </div>
+         </div>
         </section>
-    </div>
+
 
     <!-- CONTACT -->
+      <section id="contact" class="section-gray">
     <div class="container">
-        <section id="contact" class="section-gray">
             <div class="row">
                 <div class="col-12">
                     <h2 class="contact-title">CONTACT<span class="numero">05</span></h2>
@@ -180,8 +184,8 @@
                     <p><a href="mailto:carrozza.gretaa@gmail.com">carrozza.gretaa@gmail.com</a></p>
                 </div>
             </div>
-        </section>
-    </div>
+         </div>
+     </section>
 
     <script src="JS/script.js"></script>
 
