--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header-fixed">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <a href="#top"><img src="img/logo.png" class="logo" alt="Logo Greta Carrozza"></a>
+                    <a href="#top"><img src="img/CG_logo.png" class="logo" alt="Logo Greta Carrozza"></a>
                 </div>
                 <div class="col-6 text-end">
                     <svg class="hamburger" id="menuButton" xmlns="http://www.w3.org/2000/svg" width="32" height="20" viewBox="0 0 32 20">
@@ -60,7 +60,7 @@
     <!-- ABOUT -->
         <section id="about" class="section-gray">
           <div class="container">
-            <div class="row g-0 align-items-center">
+            <div class="row g-0 ">
                 <div class="col-12 col-md-6 order-md-0">
                     <div class="content-box">
                         <h2>ABOUT<span class="numero">01</span></h2>
@@ -82,7 +82,7 @@
     <!-- STUDY -->
       <section id="study" class="section-white">
          <div class="container">
-            <div class="row g-0 align-items-center">
+            <div class="row g-0 ">
                 <div class="col-12 col-md-6 order-md-0">
                     <img src="img/FOTO (2).png" class="img-fluid" alt="Maturità">
                 </div>
@@ -122,12 +122,13 @@
     </div>
 </section>
 
+
     <!-- GALLERY -->
-     <section id="gallery" class="section-white"></section>
+     <section id="gallery" class="section-white">
        <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="gallery-title">GALLERY<span class="numero">04</span>  
+                    <h2>GALLERY<span class="numero">04</span>  
                         <button class="btn-arrow" id="galleryNext">
                             <svg id="galleryArrow" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                 <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
